@@ -1,3 +1,8 @@
+Sun Dec 31 17:41:21 2000  George Lebl <jirka@5z.com>
+
+	* panel-widget.[ch], extern.c:  minor cleanup, and use initial
+	  cursor position for free movement for nicer moving.
+
 Sat Dec 30 23:00:47 2000  George Lebl <jirka@5z.com>
 
 	* panel.c, main.c, panel-util.[ch], menu.c, session.c, drawer.c:
